# dilithium

./: .gitignore  CMakeLists.txt
ref/: CMakeLists.txt
ref/test/: cpucycles.h
